# metronome-arbitrage-analysis

./: README.md  pyproject.toml
src/: constants.py  functions.py  helpers.py  main.py  plotter.py
