[tool.poetry]
name = "C11 task 2"
version = "0.1.0"
description = "My solutions to the C11 2nd task"
authors = ["luca-nik <luca.nicoli.engineer@gmail.com>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
matplotlib = "^3.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
